# flask-tutorial

./: .coverage  hello.py  pyproject.toml
Gaishokurepo/: __init__.py  blog.py  schema.sql
Gaishokurepo/api/: blog.py
Gaishokurepo/models/: post.py
Gaishokurepo/templates/: base.html
Gaishokurepo/templates/auth/: login.html
Gaishokurepo/templates/blog/: index.html
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/api/: blog.py
flaskr/models/: post.py  user.py
flaskr/templates/auth/: register.html
flaskr/templates/blog/: create.html  update.html
instance/: flaskr.sqlite  gaishokurepo.sqlite
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
